--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@
 * Fix BB map drawing on world boundaries: 90 N/90 S, 180 W/180 E
 * Fix issue #2539966 - System::get_property('platform') on Android is UNKNOWN
 * Fix issue #2540390 - blackberry map causes exception
+* Fix issue #2547920 - update attributes on new object doesn't call updateobjects
 
 == 1.4.1
 * fixed issue with empty cookie check failing
