--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,9 +1,12 @@
 == 1.4.2
 * Fix for BB push data
-* Fix BB map drawing on world boundaries: 90 N/90 S, 180 W/180 E
+* Fix issue #2547236 - BB map: incorrect drawing of world bounds (90N/90S, 180W/180E)
 * Fix issue #2539966 - System::get_property('platform') on Android is UNKNOWN
 * Fix issue #2540390 - blackberry map causes exception
 * Fix issue #2547920 - update attributes on new object doesn't call updateobjects
+* Fix issue #2561942 - BB Map: crash in case of wrong input parameters
+* Fix issue #2561958 - iPhone map: crash in case of wrong input parameters
+* Fix issue #2581678 - Android: GPS updates does not work
 
 == 1.4.1
 * fixed issue with empty cookie check failing
