--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,8 @@
 * Fix issue #2924952 - BB Sim doesn't launch on windows 7
 * Fix issue #2931788 - iPhone: wrong refresh
 * Fix AsyncHttp 'cancel request'
+* Fix issue #2948834 - iPhone: ringtonemanager
+* Fix issue #2964439 - Android: build problems when no Google API add-ons installed
 
 == 1.5.0
 * native screen resolution for iPad
