--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+== 1.5.4
+* Fix issue #3132788 - rake clean:iphone fails
+
 == 1.5.3
 * Fix issue #2980590 - iphone: call NetRequest from toolbar
 * Fix issue #3104338 - rake run:iphone doesn't install into iphone sdk 3.2
